# simplicity-rs

./: .gitignore  Cargo.toml  README.md  SECRET  input.txt  output.txt
.github/workflows/: build.yml
src/: handler.rs  main.rs  main_old.rs  main_old2.rs  old_main2.rs
src/handler/commands/: avatar.rs  ban.rs  coinflip.rs  eight_ball.rs  eval.rs  eval_support.rs  help.rs  invite.rs  kick.rs  minecraftprofile.rs  mod.rs  prelude.rs  purge.rs  sample.rs  target_test.rs  test.rs  unban.rs  userinfo.rs  utils.rs
