[package]
name = "simplicity-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ['rt-multi-thread'] }
serenity = { version = "0.11.1", default-features = false, features = ["client", "gateway", "model", "rustls_backend",
    # "builder"
] }
# pollster = "0.2.5"
phf = { version = "0.10.1", features = ["macros"] }
rand = "0.8.5"

[profile.release]
strip = true
