[package]
name = "simplicity-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ['rt-multi-thread'] }
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache",
    # "builder"
] }
phf = { version = "0.10.1", features = ["macros"] }
rand = "0.8.5"
reqwest = { version = "0.11.10" }
# dictionaries = { git = "https://github.com/Raforawesome/dictionaries-rs" }
serde_json = "1.0.81"
# inline-c = "0.1.6"

[profile.release]
strip = true
